parallax added and header aligned

--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -1,5 +1,8 @@
-<mat-toolbar color="primary" class="fixed-header">
-  <mat-toolbar-row>
-    <span>Custom Toolbar</span>
-  </mat-toolbar-row>
-</mat-toolbar>
+<header class="fixed-header">
+  <ul>
+    <li>Home</li>
+    <li>Resume</li>
+    <li>Projects</li>
+    <li>Contact me</li>
+  </ul>
+</header>
