--- a/src/app/shared/header/header.component.scss
+++ b/src/app/shared/header/header.component.scss
@@ -1,6 +1,65 @@
 .fixed-header {
-    top: 0;
     position: fixed;
-    z-index:999;
-  
-  }
+    z-index: 999;
+    top: 0;
+    background-color: #ffffff;
+    width: 100%;
+    height: 10vh;
+}
+
+ul:hover>li:not(:hover) {
+    opacity: 0.3;
+}
+
+li {
+    list-style-type: none;
+    margin: .5em 0;
+    padding: .1em .5em;
+    font-size: 1.5rem;
+    font-family: sans-serif;
+    cursor: pointer;
+    pointer-events: auto;
+    position: relative;
+    transition: opacity 200ms;
+}
+
+li::before {
+    content: "";
+    width: calc(100% - 1em);
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: 0 auto;
+    border-bottom: 2px solid;
+    transform: scale(0);
+    transition: transform 200ms ease-out;
+    transform-origin: bottom;
+    box-sizing: border-box;
+}
+
+li:hover::before {
+    transform: scale(1);
+    box-sizing: border-box;
+}
+
+ul {
+    flex-direction: row;
+    display: flex;
+    pointer-events: none;
+    background: #303035;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    margin: 0;
+    padding: 0;
+    height: 100%;
+}
+
+@media only screen and (max-width: 600px) {
+    li {
+        font-size: 1rem;
+    }
+}
